testing testimonial background image issue on mobile. Blurry

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -886,14 +886,12 @@ h1 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5)), url(../images/testimonials-background.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: bottom;
   background-size: cover;
   padding-bottom: 2vh;
 }
 
 @media screen and (min-width: 768px) {
   .testimonials-hero {
-    background-position: center;
     padding-bottom: 20vh;
   }
 }
